--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -915,17 +915,7 @@ input[type="submit"]:hover {
 	margin: 0 0 var(--wp--preset--spacing--50) 0 !important;
 	padding: 0;
 	text-transform: none;
-}
-
-.o2-app-page-title a {
-	color: #0072a9;
-}
-.o2-app-page-title a:visited {
-	color: #4ca6cf;
-}
-
-.home .o2-app-page-title {
-	display: none;
+	color: inherit;
 }
 
 .o2-app-controls {
@@ -1098,7 +1088,6 @@ article.post.tag-p2-xpost a.author-avatar img.avatar {
  
 .o2-xpost-author {
 	margin: 5px 0 0 0;
-	line-height: 1.3;
 }
 
 .o2-xpost-author a {
@@ -1107,6 +1096,13 @@ article.post.tag-p2-xpost a.author-avatar img.avatar {
 
 .o2-xpost-author .entry-date {
 	padding-left: unset;
+}
+
+h2.o2-xpost-content {
+	font-size: var(--wp--preset--font-size--normal) !important;
+	font-weight: 400;
+	text-wrap: pretty;
+	line-height: var(--wp--custom--body--short-text--typography--line-height) !important;
 }
  
 article.post.tag-p2-xpost {
