Breathe 2024: Remove opacity from tags and mentions
Closes https://github.com/WordPress/wporg-make/issues/29


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14146 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -796,6 +796,11 @@ input[type="submit"]:hover {
 	box-shadow: unset;
 }
 
+.tag-prefix,
+.mentions-prefix {
+	opacity: unset;
+}
+
 @media only screen and (max-width: 480px) {
 	body.responsive-show #wpadminbar {
 		top: 0;
