Breathe 2024: Improve consistency of heading font weights
Fixes https://github.com/WordPress/wporg-make/issues/28


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14157 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -84,9 +84,12 @@ h4 {
 h1,
 h2,
 h3,
+.component .component-info h3,
 h4,
+h5,
+h6,
 .content-area h2 {
-	font-weight: 600;
+	font-weight: var(--wp--custom--heading--typography--font-weight);
 }
 
 .entry-content .reports.ticket-reports {
@@ -2324,4 +2327,3 @@ nav.handbook-navigation .nav-links a[rel="next"] {
 		border-right: 0;
 	}
 }
-
