Breathe 2024: Fix avatar styles
Update text and layout styles on Meta Pledges page.
Fix alignment of x-post-author avatar and text.

Fixes https://github.com/WordPress/wordpress.org/issues/409


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14160 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -1093,7 +1093,7 @@ article.post.tag-p2-xpost a.author-avatar img.avatar {
 }
  
 .o2-xpost-author {
-	margin: 5px 0 0 0;
+	font-size: inherit;
 }
 
 .o2-xpost-author a {
@@ -1707,21 +1707,32 @@ body.error404 {
 
 .team-contributor {
 	overflow: auto;
-	margin-bottom: 22px;
+	margin-bottom: var(--wp--style--block-gap);
+	display: grid;
+	grid-template-columns: 64px 1fr;
+	grid-template-rows: 2fr;
+	column-gap: 12px;
 }
 
 .team-contributor .avatar {
-	float: left;
-	margin-right: 20px;
+	margin-right: var(--wp--style--block-gap);
+	width: 64px;
+	height: 64px;
+	grid-row-start: 1;
+	grid-row-end: 3;
 }
 
 .contributor-name {
-	padding-top: 14px;
-	font-size: 1.2rem;
+	padding-top: 2px;
 }
 
 article.page p.contributor-name {
-	margin-bottom: 8px;
+	margin-bottom: 0;
+	font-weight: 600;
+}
+
+article.page p.contributor-bio {
+	font-size: var(--wp--preset--font-size--small);
 }
 
 
