--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -96,6 +96,10 @@ h6,
 	font-size: var(--wp--preset--font-size--small);
 }
 
+button:focus {
+	box-shadow: unset;
+}
+
 table {
 /* tables still need 'cellspacing="0"' in the markup */
 	border-collapse: separate;
@@ -221,7 +225,10 @@ p.has-background,
 
 .wp-block-wporg-local-navigation-bar {
 	padding-left: var(--wp--preset--spacing--edge-space);
-	padding-right: var(--wp--preset--spacing--edge-space);
+
+	@media (min-width: 890px) {
+		padding-right: var(--wp--preset--spacing--edge-space);
+	}
 }
 
 /* For sites with no welcome box */
