Breathe 2024: Remove underline from subscription button
Fixes https://github.com/WordPress/wordpress.org/issues/414


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14162 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -646,8 +646,8 @@ body.blog #secondary-content ul {
 	padding-left: unset;
 }
 
-#secondary-content a:not(.widget_wporg_handbook_pages a),
-#secondary-content a:hover {
+#secondary-content a:not(.widget_wporg_handbook_pages a):not(.wp-block-button__link),
+#secondary-content a:not(.wp-block-button__link):hover {
 	text-decoration: underline;
 }
 
