Breathe 2024: Improve post social action styles
Closes https://github.com/WordPress/wordpress.org/issues/386


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14163 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -1438,6 +1438,7 @@ nav.o2-post-footer-actions ul li > span > a {
 	padding-right: var(--wp--custom--button--small--spacing--padding--right);
 	font-size: var(--wp--preset--font-size--small);
 	line-height: var(--wp--custom--button--typography--line-height);
+	border-radius: 4px;
 }
 
 nav.o2-post-footer-actions ul li > a:hover,
@@ -2356,4 +2357,13 @@ nav.handbook-navigation .nav-links a[rel="next"] {
 	.navigation .nav-older a {
 		border-right: 0;
 	}
+}
+
+/* Sharedaddy */
+.sharedaddy.sd-sharing-enabled {
+	margin-top: var(--wp--preset--spacing--40);
+}
+
+.wporg-make .sharedaddy h3.sd-title {
+	display: none;
 }
