Breathe 2024: Revert showing front page h1 in content
Make the site title in the front page local nav an h1 instead. This fixes a lot of issues with heading tags being used in the welcome box.

See https://github.com/WordPress/wordpress.org/issues/382


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14165 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -3,6 +3,7 @@
  * Template: p2-breathe
  * Description: Child theme of P2 Breathe, with modifications specifically for WordPress.org.
  * Supports Oxygen: true
+ * Version: 1.0.0
  */
 
 body {
@@ -929,6 +930,10 @@ input[type="submit"]:hover {
 	padding: 0;
 	text-transform: none;
 	color: inherit;
+}
+
+.home .o2-app-page-title {
+	display: none;
 }
 
 .o2-app-controls {
