Breathe 2024: Hide sidebar icons for post filters
Closes https://github.com/WordPress/wordpress.org/issues/404


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14166 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -678,7 +678,11 @@ body.blog #secondary-content ul {
 
 li.o2-filter-widget-item a {
 	padding: unset;
-	margin-bottom: 5px;
+	margin-bottom: var(--wp--preset--spacing--10);
+}
+
+li.o2-filter-widget-item a:before {
+	display: none;
 }
 
 li.o2-filter-widget-item a:hover {
@@ -690,11 +694,6 @@ li.o2-filter-widget-item a.o2-filter-widget-selected {
 	background: unset;
 	font-weight: 600;
 	color: var(--wp--custom--link--color--text);
-}
-
-li.o2-filter-widget-item a:hover:before,
-li.o2-filter-widget-item a.o2-filter-widget-selected:before {
-	color: inherit;
 }
 
 .o2-live-comments-container p.o2-live-item-text {
