wporg-plugins-2024: Fix long button in advanced view.
Props: mujuonly.
Fixes: https://meta.trac.wordpress.org/ticket/7818


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14175 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins-2024/client/components/_buttons.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins-2024/client/components/_buttons.scss
@@ -47,3 +47,8 @@ select + button.button {
 .wp-block-post-content a.button {
 	text-decoration: none;
 }
+
+/* See: https://meta.trac.wordpress.org/ticket/7818 */
+.wp-block-button__link {
+	width: auto;
+}
