Breathe 2024: Adjust inline block copy styles
Make styling of pre, code and glossary terms consistent, and stop them overlapping.

Fixes https://github.com/WordPress/wordpress.org/issues/416


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14179 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -124,8 +124,23 @@ td {
 	padding: 10px;
 }
 
-pre, code {
-	font-size: 0.9em;
+pre,
+code,
+.glossary-item-container {
+	background: var(--wp--preset--color--light-grey-2);
+	padding: 3px 0;
+}
+
+.glossary-item-container {
+	border-radius: unset;
+}
+
+pre,
+code {
+	font-size: inherit;
+	padding: 3px;
+	border-radius: 2px;
+	max-width: 100%;
 }
 
 pre code {
