Adjust sidebar live item line-height
Fixes https://github.com/WordPress/wordpress.org/issues/429


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14202 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -713,6 +713,7 @@ li.o2-filter-widget-item a.o2-filter-widget-selected {
 
 .o2-live-comments-container p.o2-live-item-text {
 	font-size: var(--wp--preset--font-size--small);
+	line-height: var(--wp--custom--body--short-text--typography--line-height);
 }
 
 .o2-live-comments-container span.entry-date {
