Breathe 2024: Fix o2 notification dismiss icon
See https://github.com/WordPress/wordpress.org/issues/431


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14225 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -31,7 +31,7 @@ a[href^="https://wordpress.slack.com"]::before {
 }
 
 /* Override the Open Sans font for o2 plugin UI elements, and set to use the body font */
-[class*="o2"]:not(body) {
+[class*="o2"]:not(body):not(.o2-notification-close) {
 	font-family: inherit !important;
 }
 /* The rule above can set Genericon wrappers to the body font, so set the actual icon element to the correct font */
