Breathe 2024: Update o2 notification item styles
Closes https://github.com/WordPress/wordpress.org/issues/431


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14227 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -1542,15 +1542,17 @@ nav.o2-post-footer-actions ul li > span > a.genericon:before {
 }
 
 #o2-dock #o2-items-scroll {
-	border-top: 1px solid var(--wp--custom--color--border);
+	border-color: var(--wp--custom--color--border);
+	border-width: 1px 1px 0;
 }
 
 #o2-dock .o2-dock-items {
-	border-color: var(--wp--custom--color--border);
-	border-top: none;
+	border: none;
 }
 
 #o2-dock .o2-dock-items li.o2-notification {
+	margin-top: var(--wp--preset--spacing--10);
+	padding: 0 var(--wp--preset--spacing--10);
 	color: var(--wp--preset--color--charcoal-1);
 	font-family: inherit;
 	font-size: var(--wp--preset--font-size--small);
