--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -24,7 +24,7 @@ a[href^="https://wordpress.slack.com"]::before {
 	vertical-align: middle;
 	height: 1em;
 	width: 1em;
-	margin-right: .2em;
+	margin-inline-end: .2em;
 	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg height='124' viewBox='0 0 124 124' width='124' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none'%3E%3Cpath d='m26.4 78.2c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9 5.8-12.9 12.9-12.9h12.9z' fill='%23e01e5a'/%3E%3Cpath d='m32.9 78.2c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9v32.3c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9z' fill='%23e01e5a'/%3E%3Cpath d='m45.8 26.4c-7.1 0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9 12.9 5.8 12.9 12.9v12.9z' fill='%2336c5f0'/%3E%3Cpath d='m45.8 32.9c7.1 0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9h-32.3c-7.1 0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9z' fill='%2336c5f0'/%3E%3Cpath d='m97.6 45.8c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9-5.8 12.9-12.9 12.9h-12.9z' fill='%232eb67d'/%3E%3Cpath d='m91.1 45.8c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9v-32.3c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9z' fill='%232eb67d'/%3E%3Cg fill='%23ecb22e' transform='translate(65 65)'%3E%3Cpath d='m13.2 32.6c7.1 0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9-12.9-5.8-12.9-12.9v-12.9z'/%3E%3Cpath d='m13.2 26.1c-7.1 0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9h32.3c7.1 0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 	background-size: 100%;
 	background-repeat: no-repeat;
@@ -376,7 +376,7 @@ body.wporg-make #headline h2 a:before {
 	display: inline-block;
 	font: normal 20px/var(--wp--custom--body--small--typography--line-height) 'dashicons';
 	vertical-align: middle;
-	margin-right: 9px;
+	margin-inline-end: 9px;
 }
 
 body.make-core #headline h2 a:before { content: '\f475'; }
@@ -426,30 +426,47 @@ body.make-hosting #headline h2 a:before { content: '\f176'; }
 	height: 24px;
 	width: 24px;
 	vertical-align: middle;
-	margin-right: 9px;
+	margin-inline-end: 9px;
 }
 
 /* Post form */
 
+.admin-bar .o2-editor-toolbar-wrapper {
+	top: unset;
+}
+
+.o2-editor-format,
+.o2-editor-format-standard,
+.o2-editor-format-aside,
+.o2-editor-format-status {
+	right: unset;
+	inset-inline-end: 5px;
+}
+
 .o2-editor .o2-editor-wrapper {
 	border-radius: 2px;
 	border: var(--wp--custom--form--border--width) var(--wp--custom--form--border--style) var(--wp--custom--form--border--color);
+	overflow: hidden;
+}
+
+.o2-editor .o2-editor-footer .o2-editor-tabs {
+	float: inline-start;
+	display: flex;
 }
 
 .o2-editor .o2-editor-footer .o2-editor-tabs li {
-	border-top-color: var(--wp--custom--form--border--color);
+	border: 1px solid var(--wp--custom--form--border--color);
+	border-bottom-left-radius: 2px;
+	border-bottom-right-radius: 2px;
+	overflow: hidden;
 }
 
 .o2-editor .o2-editor-footer .o2-editor-tabs li:first-of-type {
-	border-inline-start-color: var(--wp--custom--form--border--color);
-	border-top-color: var(--wp--custom--form--border--color);
-	-webkit-border-bottom-left-radius: 2px;
-	-webkit-border-bottom-right-radius: 2px;
-	-moz-border-radius-bottomleft: 2px;
-	-moz-border-radius-bottomright: 2px;
+	border-left: 1px solid var(--wp--custom--form--border--color);
+	border-top: 1px solid var(--wp--custom--form--border--color);
 	border-bottom-left-radius: 2px;
 	border-bottom-right-radius: 2px;
-	-webkit-background-clip: padding-box;
+	margin-inline-end: -1px;
 }
 
 .o2-editor .o2-editor-footer .o2-editor-tabs li.selected {
@@ -458,19 +475,27 @@ body.make-hosting #headline h2 a:before { content: '\f176'; }
 
 .o2-editor .o2-editor-footer .o2-editor-tabs li a {
 	background: var(--wp--preset--color--light-grey-2);
-	border-color: var(--wp--custom--form--border--color);
-	border-top-color: transparent;
-	-webkit-border-bottom-left-radius: 2px;
-	-webkit-border-bottom-right-radius: 2px;
-	-moz-border-radius-bottomleft: 2px;
-	-moz-border-radius-bottomright: 2px;
-	border-bottom-left-radius: 2px;
-	border-bottom-right-radius: 2px;
-	font-size: 12px;
+	border: unset;
+	font-size: var(--wp--preset--font-size--small);
+	border-radius: unset;
+}
+
+.o2-editor .o2-editor-footer .o2-editor-tabs li.selected a {
+	border-top: unset;
 }
 
 .o2-editor .o2-editor-footer .o2-editor-tabs li a:before {
 	content: none;
+}
+
+.o2-editor .o2-editor-footer > a.o2-save.primary {
+	margin-left: unset;
+	margin-inline-start: 5px;
+}
+
+.o2-editor .o2-editor-footer > a,
+.o2-post-form-options {
+	float: inline-end;
 }
 
 .o2-save.primary,
@@ -1613,7 +1638,7 @@ nav.o2-post-footer-actions ul li > span > a.genericon:before {
 .make-welcome .entry-meta {
 	margin: 0 !important;
 	position: absolute;
-	right: var(--wp--preset--spacing--edge-space);
+	inset-inline-end: var(--wp--preset--spacing--edge-space);
 	top: var(--wp--preset--spacing--20);
 	font-size: var(--wp--preset--font-size--small);
 	line-height: 1.8;
@@ -1621,10 +1646,10 @@ nav.o2-post-footer-actions ul li > span > a.genericon:before {
 }
 
 .make-welcome .entry-meta .post-edit-link {
-	margin-right: 10px;
+	margin-inline-end: 10px;
 	font-weight: normal;
-	padding-right: 15px;
-	border-right: 1px solid #ccc;
+	padding-inline-end: 15px;
+	border-inline-end: 1px solid #ccc;
 }
 
 .make-welcome .entry-meta [type="button"] {
@@ -1649,13 +1674,20 @@ nav.o2-post-footer-actions ul li > span > a.genericon:before {
 	outline: thin dotted;
 }
 
+[dir="rtl"] .make-welcome #make-welcome-toggle::before,
 .make-welcome #make-welcome-toggle::after {
 	content: "\f343";
 	font-family: dashicons;
 	vertical-align: middle;
-	margin-left: 9px;
+	margin-inline-start: 9px;
 	overflow: auto;
 }
+
+[dir="rtl"] .make-welcome #make-welcome-toggle::after {
+	display: none;
+}
+
+[dir="rtl"] .make-welcome.collapsed #make-welcome-toggle::before,
 .make-welcome.collapsed #make-welcome-toggle::after {
 	content: "\f347";
 }
