Breathe 2024: Fix RTL layout of glossary popups
See https://github.com/WordPress/wordpress.org/issues/377


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14233 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -2595,6 +2595,7 @@ nav.handbook-navigation .nav-links a[rel="next"] {
 .tippy-tooltip {
 	padding: var(--wp--preset--spacing--20);
 	border-radius: 2px;
+	text-align: start;
 }
 
 .glossary-item-container {
