Breathe 2024: Update glossary pop up heading style
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14240 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -2629,8 +2629,8 @@ nav.handbook-navigation .nav-links a[rel="next"] {
 .glossary-item-header {
 	display: block;
 	color: var(--wp--preset--color--charcoal-1);
-	font-weight: var(--wp--custom--heading--typography--font-weight);
-	font-size: var(--wp--preset--font-size--heading-3);
+	font-weight: 600;
+	font-size: var(--wp--preset--font-size--heading-4);
 	margin-bottom: var(--wp--style--block-gap);
 }
 
